# Robolegs

./: README.md
Arduino/receive_legs/: receive_legs.ino
src/interface/: CMakeLists.txt  mainpage.dox  package.xml
src/interface/include/interface/interface/: main_window.hpp
src/interface/src/: main.cpp  main_window.cpp
src/interface/ui/: main_window.ui
src/joint_angle_sensors/: CMakeLists.txt  package.xml
src/joint_angle_sensors/msg/: jas.msg
src/joint_angle_sensors/scripts/: jas_server.py
