<?xml version="1.0"?>
<package>
  <name>interface</name>
  <version>0.1.0</version>
  <description>

     interface

  </description>
  <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
  <author>Simon Trendel</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>roboy_managing_node</build_depend>
  <build_depend>communication</build_depend>
  <run_depend>communication</run_depend>
  <run_depend>roboy_managing_node</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>

 
</package>
